--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary: #343434;
+  --secondary: cornflowerblue;
+}
+
+* {
+  scrollbar-width: thin;
+  /* scrollbar-color: var(--secondary) var(--primary); */
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  /* background: var(--primary); */
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  /* background-color: var(--secondary); */
+  border-radius: 14px;
+  border: 2px solid var(--primary);
+}
+
 body {
   background-color: #1E1E1E;  
 }
